Fixes switch input overflow

--- a/less/_forms.less
+++ b/less/_forms.less
@@ -124,6 +124,8 @@ form:not(.form-horizontal) {
 
 .switch {
     padding-left: 64px;
+    overflow: hidden;
+    position: relative;
 
     > input {
         appearance: none;
